// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Headings Section Title 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <styled.h2
            fontSize="26px"
            fontWeight="500"
            lineHeight="1.23076923"
            m={0}
            mb="16px"
            theme={
              Object {
                "borders": Array [],
                "breakpoints": Object {
                  "extraLarge": "1920px",
                  "extraSmall": "0px",
                  "large": "1360px",
                  "medium": "1024px",
                  "small": "768px",
                },
                "colors": Object {
                  "black": "#011e38",
                  "blackBlue": "#122b47",
                  "blue": "#216beb",
                  "darkBlue": "#00438f",
                  "darkGrey": "#434d59",
                  "green": "#008059",
                  "grey": "#c0c8d1",
                  "lightBlue": "#e1ebfa",
                  "lightGreen": "#e9f7f2",
                  "lightGrey": "#e4e7eb",
                  "lightRed": "#fae6ea",
                  "lightYellow": "#fcf5e3",
                  "red": "#cc1439",
                  "white": "#ffffff",
                  "whiteGrey": "#f0f2f5",
                  "yellow": "#ffbb00",
                },
                "fontSizes": Object {
                  "large": "20px",
                  "larger": "26px",
                  "largest": "46px",
                  "medium": "16px",
                  "small": "14px",
                  "smaller": "12px",
                },
                "fontWeights": Object {
                  "bold": "600",
                  "light": "300",
                  "medium": "500",
                  "normal": "400",
                },
                "fonts": Object {
                  "base": "'IBM Plex Sans', sans-serif",
                  "mono": "'IBM Plex Mono', monospace",
                },
                "lineHeights": Object {
                  "base": "1.5",
                  "sectionTitle": "1.23076923",
                  "smallTextBase": "1.71428571",
                  "smallTextCompressed": "1.14285714",
                  "smallerText": "1.33333333",
                  "subsectionTitle": "1.2",
                  "title": "1.04347826",
                },
                "radii": Object {
                  "circle": "50%",
                  "medium": "4px",
                  "small": "2px",
                },
                "shadows": Object {
                  "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                  "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                  "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                  "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                  "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                },
                "space": Object {
                  "half": "4px",
                  "none": "0px",
                  "x1": "8px",
                  "x2": "16px",
                  "x3": "24px",
                  "x4": "32px",
                  "x5": "40px",
                  "x6": "48px",
                  "x8": "64px",
                },
                "zIndex": Object {
                  "content": 100,
                  "overlay": 1000,
                  "tabsBar": 210,
                  "tabsScollIndicator": 200,
                },
              }
            }
          >
            <h2
              className="sc-AykKH iNnKKi"
              fontSize="26px"
              fontWeight="500"
            >
              Section Title
            </h2>
          </styled.h2>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots Headings Subsection Title 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <Styled(styled.h3)
            fontSize="20px"
            fontWeight="500"
            lineHeight="1.2"
            m={0}
            mb="8px"
            theme={
              Object {
                "borders": Array [],
                "breakpoints": Object {
                  "extraLarge": "1920px",
                  "extraSmall": "0px",
                  "large": "1360px",
                  "medium": "1024px",
                  "small": "768px",
                },
                "colors": Object {
                  "black": "#011e38",
                  "blackBlue": "#122b47",
                  "blue": "#216beb",
                  "darkBlue": "#00438f",
                  "darkGrey": "#434d59",
                  "green": "#008059",
                  "grey": "#c0c8d1",
                  "lightBlue": "#e1ebfa",
                  "lightGreen": "#e9f7f2",
                  "lightGrey": "#e4e7eb",
                  "lightRed": "#fae6ea",
                  "lightYellow": "#fcf5e3",
                  "red": "#cc1439",
                  "white": "#ffffff",
                  "whiteGrey": "#f0f2f5",
                  "yellow": "#ffbb00",
                },
                "fontSizes": Object {
                  "large": "20px",
                  "larger": "26px",
                  "largest": "46px",
                  "medium": "16px",
                  "small": "14px",
                  "smaller": "12px",
                },
                "fontWeights": Object {
                  "bold": "600",
                  "light": "300",
                  "medium": "500",
                  "normal": "400",
                },
                "fonts": Object {
                  "base": "'IBM Plex Sans', sans-serif",
                  "mono": "'IBM Plex Mono', monospace",
                },
                "lineHeights": Object {
                  "base": "1.5",
                  "sectionTitle": "1.23076923",
                  "smallTextBase": "1.71428571",
                  "smallTextCompressed": "1.14285714",
                  "smallerText": "1.33333333",
                  "subsectionTitle": "1.2",
                  "title": "1.04347826",
                },
                "radii": Object {
                  "circle": "50%",
                  "medium": "4px",
                  "small": "2px",
                },
                "shadows": Object {
                  "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                  "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                  "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                  "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                  "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                },
                "space": Object {
                  "half": "4px",
                  "none": "0px",
                  "x1": "8px",
                  "x2": "16px",
                  "x3": "24px",
                  "x4": "32px",
                  "x5": "40px",
                  "x6": "48px",
                  "x8": "64px",
                },
                "zIndex": Object {
                  "content": 100,
                  "overlay": 1000,
                  "tabsBar": 210,
                  "tabsScollIndicator": 200,
                },
              }
            }
          >
            <h3
              className="sc-AykKI sc-AykKJ hriOmh"
              fontSize="20px"
              fontWeight="500"
            >
              SubsectionTitle
            </h3>
          </Styled(styled.h3)>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots Headings Title 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <styled.h1
            fontSize="46px"
            fontWeight="300"
            lineHeight="1.04347826"
            m={0}
            mb="48px"
            theme={
              Object {
                "borders": Array [],
                "breakpoints": Object {
                  "extraLarge": "1920px",
                  "extraSmall": "0px",
                  "large": "1360px",
                  "medium": "1024px",
                  "small": "768px",
                },
                "colors": Object {
                  "black": "#011e38",
                  "blackBlue": "#122b47",
                  "blue": "#216beb",
                  "darkBlue": "#00438f",
                  "darkGrey": "#434d59",
                  "green": "#008059",
                  "grey": "#c0c8d1",
                  "lightBlue": "#e1ebfa",
                  "lightGreen": "#e9f7f2",
                  "lightGrey": "#e4e7eb",
                  "lightRed": "#fae6ea",
                  "lightYellow": "#fcf5e3",
                  "red": "#cc1439",
                  "white": "#ffffff",
                  "whiteGrey": "#f0f2f5",
                  "yellow": "#ffbb00",
                },
                "fontSizes": Object {
                  "large": "20px",
                  "larger": "26px",
                  "largest": "46px",
                  "medium": "16px",
                  "small": "14px",
                  "smaller": "12px",
                },
                "fontWeights": Object {
                  "bold": "600",
                  "light": "300",
                  "medium": "500",
                  "normal": "400",
                },
                "fonts": Object {
                  "base": "'IBM Plex Sans', sans-serif",
                  "mono": "'IBM Plex Mono', monospace",
                },
                "lineHeights": Object {
                  "base": "1.5",
                  "sectionTitle": "1.23076923",
                  "smallTextBase": "1.71428571",
                  "smallTextCompressed": "1.14285714",
                  "smallerText": "1.33333333",
                  "subsectionTitle": "1.2",
                  "title": "1.04347826",
                },
                "radii": Object {
                  "circle": "50%",
                  "medium": "4px",
                  "small": "2px",
                },
                "shadows": Object {
                  "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                  "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                  "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                  "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                  "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                },
                "space": Object {
                  "half": "4px",
                  "none": "0px",
                  "x1": "8px",
                  "x2": "16px",
                  "x3": "24px",
                  "x4": "32px",
                  "x5": "40px",
                  "x6": "48px",
                  "x8": "64px",
                },
                "zIndex": Object {
                  "content": 100,
                  "overlay": 1000,
                  "tabsBar": 210,
                  "tabsScollIndicator": 200,
                },
              }
            }
          >
            <h1
              className="sc-AykKG lceBGU"
              fontSize="46px"
              fontWeight="300"
            >
              Title
            </h1>
          </styled.h1>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots Headings With a custom margin 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <styled.h1
            fontSize="46px"
            fontWeight="300"
            lineHeight="1.04347826"
            m={0}
            mb="x6"
            theme={
              Object {
                "borders": Array [],
                "breakpoints": Object {
                  "extraLarge": "1920px",
                  "extraSmall": "0px",
                  "large": "1360px",
                  "medium": "1024px",
                  "small": "768px",
                },
                "colors": Object {
                  "black": "#011e38",
                  "blackBlue": "#122b47",
                  "blue": "#216beb",
                  "darkBlue": "#00438f",
                  "darkGrey": "#434d59",
                  "green": "#008059",
                  "grey": "#c0c8d1",
                  "lightBlue": "#e1ebfa",
                  "lightGreen": "#e9f7f2",
                  "lightGrey": "#e4e7eb",
                  "lightRed": "#fae6ea",
                  "lightYellow": "#fcf5e3",
                  "red": "#cc1439",
                  "white": "#ffffff",
                  "whiteGrey": "#f0f2f5",
                  "yellow": "#ffbb00",
                },
                "fontSizes": Object {
                  "large": "20px",
                  "larger": "26px",
                  "largest": "46px",
                  "medium": "16px",
                  "small": "14px",
                  "smaller": "12px",
                },
                "fontWeights": Object {
                  "bold": "600",
                  "light": "300",
                  "medium": "500",
                  "normal": "400",
                },
                "fonts": Object {
                  "base": "'IBM Plex Sans', sans-serif",
                  "mono": "'IBM Plex Mono', monospace",
                },
                "lineHeights": Object {
                  "base": "1.5",
                  "sectionTitle": "1.23076923",
                  "smallTextBase": "1.71428571",
                  "smallTextCompressed": "1.14285714",
                  "smallerText": "1.33333333",
                  "subsectionTitle": "1.2",
                  "title": "1.04347826",
                },
                "radii": Object {
                  "circle": "50%",
                  "medium": "4px",
                  "small": "2px",
                },
                "shadows": Object {
                  "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                  "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                  "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                  "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                  "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                },
                "space": Object {
                  "half": "4px",
                  "none": "0px",
                  "x1": "8px",
                  "x2": "16px",
                  "x3": "24px",
                  "x4": "32px",
                  "x5": "40px",
                  "x6": "48px",
                  "x8": "64px",
                },
                "zIndex": Object {
                  "content": 100,
                  "overlay": 1000,
                  "tabsBar": 210,
                  "tabsScollIndicator": 200,
                },
              }
            }
          >
            <h1
              className="sc-AykKG lceBGU"
              fontSize="46px"
              fontWeight="300"
            >
              Title
            </h1>
          </styled.h1>
          <styled.p
            color="currentColor"
            disabled={false}
            fontSize="16px"
            inline={false}
            lineHeight="1.5"
            m={0}
          >
            <p
              className="sc-AykKF bljHeM"
              color="currentColor"
              disabled={false}
              fontSize="16px"
            >
              Lorem ipsum
            </p>
          </styled.p>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;
